tests/typing/fail/pre-01.stderr
error: this expression will cause an access to an undefined value
 --> tests/typing/fail/pre-01.rs:8:19
  |
8 |         a : int = pre 0;
  |                   ^^^^^
